@@ -9,6 +9,7 @@
 	* Added support for EPG in Hong Kong from Raymond Tau (LP: #477388)
 	* Set timeout for EPG events to 1 second (LP: #434994) 
 	* Moved DB to .local/share/me-tv (LP: #486247) 
+	* Added schema file for GConf (LP: #460612)
 
 2009-08-10  Michael Lamothe <michael.lamothe@gmail.com>
 
